added the coffee alum site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-Hello World
+<!doctype html>
+<html>
+
+<head>
+    <title>CoffeeAlum</title>
+    <link rel="stylesheet" href="simple-grid.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
+</head>
+
+<body class="all-size">
+    <div class="main-grid"> <!-- .main, .grid -->
+
+        <h1 align='left' class="title-coffee">CoffeeAlum</h1>
+
+        <div class="clear-box"></div>
+
+        <div class="header col-100">
+            <div class="header-text">
+                <h1>WHERE STUDENTS AND ALUMNI CAN MEET OVER COFFEE</h1>
+                <p class='header-paragraph'>Our mission is simple. We want to give college undergraduates
+                    the opportunity to meet alumni and upperclassmen who can offer invaluable experiential
+                    advice about what paths are out there. This can range from insights into what the best
+                    classes are to which majors offer the best jobs.
+                 </p>
+            </div>
+        </div>
+
+        <div class="clear-box"></div>
+
+        <div class="students">
+            <div class="student col-66">
+                <h2 class="exploration-header">STUDENT EXPLORATION</h2>
+                <div class="line-separator"></div>
+                <p class="exploration-text">The number of career opportunities for college students
+                is almost endless. CoffeeAlum makes exploring those
+                avenues easier by connecting students with alumni.</p>
+            </div>
+            <div id="tester" class="student col-33">
+                <div class="coffee"></div>
+                <div class="student-quote">
+                    <div class="quote-block">
+                        <p class="quote-text">Choosing a career is hard. Coffee isn't.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="clear-box"></div>
+
+        <div class="alumni">
+            <div class="alumni col-66">
+                <h2 class="alumni-header">ALUMNI WISDOM</h2>
+                <div class="alumni-line-separator"></div>
+                <p class="alumni-text">Take part in the construction of a vibrant community
+                of students and alumni. At your own convenience, you can talk with undergraduates
+                that can probably learn a thing or two from you.</p>
+            </div>
+
+            <div id="test" class="alumni col-33">
+                <div class="alumni-quote">
+                    <div class="alumni-quote-block">
+                        <p class="alumni-quote-text"><q>Mentoring is a brain to pick, an ear
+                        to listen and a push in the right direction</q></p>
+                        <div class="holder">
+                            <div class="author-line-separator"></div>
+                            <h2 class="author">John C. Crosby</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- <div class="steps">
+            <div class="col-33">
+                <h2>STEP ONE</h2>
+                <p>Tell us your interests.</p>
+            </div>
+            <div class="col-33">
+                <h2>STEP TWO</h2>
+                <p>View Alumni Profiles.</p>
+            </div>
+            <div class="col-33">
+                <h2>STEP THREE</h2>
+                <p>Message Alum and Grab Coffee!</p>
+            </div>
+        </div>
+
+        <div class="col-100">
+           <h3 class="center-title">Alumni Wisom</h3>
+            <p>Are you curious about academic or student life of your alma mater?
+            Would you like to enlighten a student on what an engineering major can lead you?
+            How about a marketing degree? Meet students over coffee at your convenience.</p>
+        </div>
+
+        <div class="steps">
+            <div class="col-33">
+                <h2>STEP ONE 1</h2>
+                <p>Tell us what you are doing after college.</p>
+            </div>
+            <div class="col-33">
+                <h2>STEP TWO</h2>
+                <p>Pick the days you are free and students will message you for those times.</p>
+            </div>
+            <div class="col-33">
+                <h2>STEP THREE</h2>
+                <p>Meet a student for coffee.</p>
+            </div>
+        </div> -->
+
+        </div>
+    <!-- </div> -->
+
+
+</body>
+
+</html>
